--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,23 @@
+on:
+  push:
+    branches:
+      - master
+
+
+
+
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: 'printing content before'
+        run: ls
+
+      - uses: actions/checkout@v3
+
+      - name: 'printing content after'
+        run: ls
+        
 
