--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: 'Login to Docker hub'
+      - name: "Login to Docker hub"
         run: docker login --username mahmoud23ahmed --password dckr_pat_rRqfop4gnURgiA0z1LufDT65wE8
 
+      - name: "Building docker image"  
+        run: docker buld -t mahmoud23ahmed/myimage .
+
+      - name: "pushin to docker hub"
+        run: docker push mahmoud23ahmed/myimage
 
